[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slon-python"
version = "0.1.0"
description = "Python parser for Single Line Object Notation (SLON)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SLON contributors"}]

[project.urls]
Homepage = "https://github.com/nunoaguiar/slon"

[tool.setuptools]
packages = ["slon_python"]
